--- a/app/src/main/res/layout/activity_if_yes.xml
+++ b/app/src/main/res/layout/activity_if_yes.xml
@@ -44,7 +44,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/def4"
         tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="346dp" />
 
@@ -52,7 +52,7 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/def5"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="346dp" />
 
@@ -77,16 +77,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="284dp" />
+        tools:layout_editor_absoluteX="192dp"
+        tools:layout_editor_absoluteY="298dp" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="284dp" />
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="298dp" />
 
     <Button
         android:id="@+id/button9"
@@ -94,15 +94,15 @@
         android:layout_height="wrap_content"
         android:text="Button"
         tools:layout_editor_absoluteX="264dp"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="208dp" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="182dp" />
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="195dp" />
 
     <Button
         android:id="@+id/button11"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:text="Button"
         tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="208dp" />
 
     <Button
         android:id="@+id/button12"
